Fixed Overlapping Header Issues
Hopefully... Added breadcrumbs to top navigation and created a more obvious home button

--- a/assets/css/documents.css
+++ b/assets/css/documents.css
@@ -37,7 +37,6 @@ body {
 
 h1 {
   margin-left: 5%;
-  margin-bottom: -10%;
 }
 
 h2 {
@@ -71,6 +70,7 @@ ol, ul {
   .navbar li {
       display: inline;
       list-style: none;
+      margin: 0;
   }
   
 
@@ -84,11 +84,14 @@ ol, ul {
     top: 0;
     border-radius: 0px;
   }
-
+  #page_title {
+    line-height: 50px;
+  }
   .navbar a {
       color: #fff;
       text-decoration: none; 
-      padding: 1em;
+      padding-left: 1em;
+      line-height: 15px;
   }
 
   .navbar a:hover {
